--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
                         </div>
                 </div>
                 
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.8/p5.min.js"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.8/addons/p5.dom.js"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.8/addons/p5.sound.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/p5.min.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/addons/p5.dom.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/addons/p5.sound.js"></script>
+                <script src="sketches/frames1.js"></script>
+                <script src="sketches/frames2.js"></script>
+                <script src="sketches/frames3.js"></script>
+                <script src="sketches/frames4.js"></script>
+                <script src="sketches/frames5.js"></script>
+                <script src="sketches/frames6.js"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
