--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <script src="sketches/frames4.js"></script>
                 <script src="sketches/frames5.js"></script>
                 <script src="sketches/frames6.js"></script>
+                <script src="sketches/scene-graph.js"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
