rotation sketch added

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/p5.min.js"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/addons/p5.dom.js"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/addons/p5.sound.js"></script>
+                <script src="sketches/rotation.js"></script>
                 <script src="sketches/frames1.js"></script>
                 <script src="sketches/frames2.js"></script>
                 <script src="sketches/frames3.js"></script>
